# chromium-patcher

./: .crpatcher.yaml  .taplo.toml  LICENSE  README.md  TODO  command_apply_patches.py  command_generate_patches.py  pyproject.toml
crpatcher/: __init__.py  command_apply_patches.py  command_generate_patches.py  main.py  util.py
crpatcher/config/: __init__.py  config.py
crpatcher/patch_apply/: __init__.py  git_patcher.py  patch_apply_status.py  patch_info.py
crpatcher/patch_generator/: __init__.py  git_patch_generator.py
patch_apply/: git_patcher.py  patch_info.py
patch_generator/: __init__.py  git_patch_generator.py
schema/: crpatcher.json  patchinfo.json
src/: command_apply_patches.py  command_generate_patches.py  config.py  main.py  util.py
src/config/: __init__.py  config.py  schema.py
src/patch_apply/: __init__.py  git_patcher.py  patch_apply_status.py  patch_info.py
src/patch_generator/: git_patch_generator.py
tests/config/: test_config.py
